unpackaged/main/default/objects/Product_Theater__c/Product_Theater__c.object-meta.xml
<CustomObject>
    <description>Used for Pfizer in GES Connect</description>
    <label>Product Theater</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Product Theater Title</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Theater</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>