unpackaged/main/default/objects/Product_Theater__c/fields/Activity_Level__c.field-meta.xml
<CustomField>
    <fullName>Activity_Level__c</fullName>
    <label>Activity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
                <default>true</default>
                <label>5</label>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>DOD</fullName>
                <isActive>false</isActive>
                <label>DOD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>