unpackaged/main/default/objects/Product_Theater__c/fields/Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason__c</fullName>
    <label>Reason for Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Biennial Event</fullName>
                <isActive>false</isActive>
                <label>Biennial Event</label>
            </value>
            <value>
                <fullName>Brand Decision</fullName>
                <isActive>false</isActive>
                <label>Brand Decision</label>
            </value>
            <value>
                <fullName>Brand Sold</fullName>
            </value>
            <value>
                <fullName>Budget Cut</fullName>
            </value>
            <value>
                <fullName>Congress not a value</fullName>
            </value>
            <value>
                <fullName>Event no longer occurring</fullName>
            </value>
            <value>
                <fullName>Event not occurring</fullName>
                <isActive>false</isActive>
                <label>Event not occurring</label>
            </value>
            <value>
                <fullName>Event not occurring in current year</fullName>
            </value>
            <value>
                <fullName>Exhibit Space Sold Out</fullName>
            </value>
            <value>
                <fullName>Failed trial data</fullName>
            </value>
            <value>
                <fullName>Influenza outbreak</fullName>
            </value>
            <value>
                <fullName>Managed by Partner</fullName>
            </value>
            <value>
                <fullName>Product Owner Decision</fullName>
                <isActive>false</isActive>
                <label>Product Owner Decision</label>
            </value>
            <value>
                <fullName>Roll Over Activity</fullName>
            </value>
            <value>
                <fullName>Strategy Change</fullName>
            </value>
            <value>
                <fullName>Transfer to Local or Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>