unpackaged/main/default/objects/Product_Theater__c/fields/Canceled_Date__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Date__c</fullName>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>