unpackaged/main/default/objects/Product_Theater__c/fields/Chair_Person__c.field-meta.xml
<CustomField>
    <fullName>Chair_Person__c</fullName>
    <description>created under SAL-460</description>
    <label>Chair Person</label>
    <length>30</length>
    <type>Text</type>
</CustomField>