unpackaged/main/default/objects/Product_Theater__c/fields/Congress__c.field-meta.xml
<CustomField>
    <fullName>Congress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Congress</label>
    <referenceTo>GES_Connect_Corporate_Accounts__c</referenceTo>
    <relationshipLabel>Product Theater</relationshipLabel>
    <relationshipName>Product_Theater</relationshipName>
    <type>Lookup</type>
</CustomField>