unpackaged/main/default/objects/Product_Theater__c/fields/Congress_Lead__c.field-meta.xml
<CustomField>
    <fullName>Congress_Lead__c</fullName>
    <label>Congress Lead</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Don Schmid</fullName>
            </value>
            <value>
                <fullName>Laine Mann</fullName>
            </value>
            <value>
                <fullName>Lee Kim</fullName>
            </value>
            <value>
                <fullName>Sandra Kusek</fullName>
            </value>
            <value>
                <fullName>Suthee Suvansri</fullName>
            </value>
            <value>
                <fullName>Virginia Hayward</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>