unpackaged/main/default/objects/Product_Theater__c/fields/Product_Theater_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Theater_Date__c</fullName>
    <label>Product Theater Date</label>
    <type>Date</type>
</CustomField>