unpackaged/main/default/objects/Product_Theater__c/fields/Product_Theater_Lead__c.field-meta.xml
<CustomField>
    <fullName>Product_Theater_Lead__c</fullName>
    <label>Product Theater Lead</label>
    <length>30</length>
    <type>Text</type>
</CustomField>