unpackaged/main/default/objects/Product_Theater__c/fields/Product_Theater_Location__c.field-meta.xml
<CustomField>
    <fullName>Product_Theater_Location__c</fullName>
    <label>Product Theater Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>