unpackaged/main/default/objects/Product_Theater__c/fields/Product_Theater_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Theater_Name__c</fullName>
    <label>Product Theater Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>