unpackaged/main/default/objects/Product_Theater__c/fields/Product_Theater_Notes__c.field-meta.xml
<CustomField>
    <fullName>Product_Theater_Notes__c</fullName>
    <label>Product Theater Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>