unpackaged/main/default/objects/Product_Theater__c/fields/Product_Theater_Time__c.field-meta.xml
<CustomField>
    <fullName>Product_Theater_Time__c</fullName>
    <label>Product Theater Start Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>