unpackaged/main/default/objects/Product_Theater__c/fields/PT_Type__c.field-meta.xml
<CustomField>
    <fullName>PT_Type__c</fullName>
    <label>Product Theater Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>