unpackaged/main/default/objects/Product_Theater__c/fields/Requested_Product_Theater_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Requested_Product_Theater_Date_and_Time__c</fullName>
    <description>created under SAL-460</description>
    <label>Requested Product Theater Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>