unpackaged/main/default/objects/Product_Theater__c/fields/Speaker_4__c.field-meta.xml
<CustomField>
    <fullName>Speaker_4__c</fullName>
    <description>created under SAL-460</description>
    <label>Speaker 4</label>
    <length>30</length>
    <type>Text</type>
</CustomField>